implementations/rust/ockam/ockam/tests/node_test/pass_with_macro_without_args.stderr
error[E0601]: `main` function not found in crate `$CRATE`
 --> $DIR/pass_with_macro_without_args.rs:1:1
  |
1 | / #[ockam::test]
2 | | async fn my_test(ctx: &mut ockam_node::Context) -> ockam_core::Result<()> {
3 | |     ctx.stop().await
4 | | }
  | |_^ consider adding a `main` function to `$DIR/tests/node_test/pass_with_macro_without_args.rs`
