implementations/rust/ockam/ockam/tests/node_test/pass_with_macro_without_args.rs
#[ockam::test]
async fn my_test(ctx: &mut ockam_node::Context) -> ockam_core::Result<()> {
    ctx.stop().await
}

fn main() {}
